# kortex-ai

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml  sitemap.xml
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  test.yml
adapters/: index.html
benchmarking/: index.html
cli/: index.html
concepts/: index.html
docs/: adapters.md  benchmarking.md  cli.md  concepts.md  index.md  observability.md  providers.md  quickstart.md  resilience.md
examples/: README.md  basic_usage.py  benchmark_example.py  cache_demo.py  crewai_example.py  custom_policy.py  custom_provider_example.py  langgraph_example.py  multi_agent_pipeline.py  streaming_example.py
examples/policies/: cost_optimized.toml  quality_first.toml
observability/: index.html
providers/: index.html
quickstart/: index.html
resilience/: index.html
scripts/: README.md  kortex_system_load_test.py  setup_free_providers.py  validate_with_real_apis.py  verify_api_keys.py
search/: search_index.json
src/kortex/: __init__.py  __main__.py  cli.py  config.py
tests/fixtures/: fake_redis.py
tests/integration/: test_batch_optimization.py  test_crewai_adapter.py  test_langgraph_adapter.py  test_parallel_handoffs.py  test_provider_resilience.py  test_runtime.py  test_runtime_detection.py  test_runtime_execution.py  test_runtime_recovery.py  test_sqlite_backend.py  test_streaming.py  test_trace_integration.py
tests/stress/: README.md  __init__.py  conftest.py  test_report.py  test_stress.py
tests/unit/: test_ab_testing.py  test_adapter_boundary.py  test_adaptive_ewma.py  test_api_key_redaction.py  test_batch_operations.py  test_benchmark.py  test_capabilities.py  test_cli.py  test_cli_standalone.py  test_cli_trace.py  test_config.py  test_connection_pool.py  test_constraints.py  test_cost_arbitrage.py  test_cost_estimation.py  test_detector.py  test_handoff_semantics.py  test_health_monitor.py  test_lazy_trace.py  test_learned_router.py  test_model_identity.py  test_nl_policy.py  test_optimization.py  test_otel_export.py  test_percentile_tracking.py  test_policy.py  test_providers.py  test_public_api.py  test_recovery.py  test_redis_store.py  test_replay.py  test_resilience.py  test_router.py  test_router_feedback.py  test_routing_decision_cache.py  test_state.py  (+11 more)
(+61 files in other folders)
